# ci_example_session_3

./: .gitignore  .stm.yml  CMakeLists.txt  base-setup.cmake
.cache/clangd/index/: cmsis_compiler.h.549860C9CDDB0571.idx  cmsis_gcc.h.BEB49CDEE3C44D81.idx  cmsis_version.h.4E7343E4361FC242.idx  core_cm4.h.8C35936561BF349D.idx  main.c.C32DD8F070DA0A40.idx  main.h.AB8F78B27C847C49.idx  mpu_armv7.h.F222F0A6602A6AB6.idx  startup_common.c.74782D56E2C8E8A6.idx  stm32f446xx.h.E865ECD211510F94.idx  stm32f4xx.h.911ACCD800BFB4E5.idx  syscalls.c.6B639B6875C281AF.idx  sysmem.c.788DEE7A29F89112.idx  system_stm32f4xx.h.1052371B9A4A7648.idx  vector_stm32f446xx.c.953C1CB8A4D81336.idx
cmake/: gcc-arm-none-eabi.cmake
cmsis-core/linker/: stm32f446re.ld
cmsis-core/startup/: startup_common.c  vector_stm32f446xx.c
src/: main.c
